[package]
edition = "2021"
name = "const_replace"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
swc_core = { version = "0.97.5", features = ["common", "ecma_ast", "ecma_parser", "ecma_visit", "ecma_codegen"] }
serde_json = {version = "1", features = ["preserve_order"]}
serde = "1"
wasm-bindgen = "0.2.83"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
